--- a/static/event_page.html
+++ b/static/event_page.html
@@ -8,9 +8,10 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600;800&display=swap');
-        :root { --bg-dark: #080a0f; --card-bg: #12151c; --text-main: #f8fafc; --border-color: #1e293b; --accent: #3b82f6; }
+        :root { --bg-dark: #080a0f; --card-bg: #12151c; --text-main: #f8fafc; --border-color: #1e293b; --accent: #3b82f6; --warn-accent: #f97316; }
+        html { scroll-behavior: smooth; }
         body { font-family: 'Outfit', sans-serif; background-color: var(--bg-dark); color: var(--text-main); line-height: 1.5; }
-        .bento-card { background: var(--card-bg); border: 1px solid var(--border-color); border-radius: 24px; padding: 2rem; }
+        .bento-card { background: var(--card-bg); border: 1px solid var(--border-color); border-radius: 24px; padding: 2rem; transition: border-color 0.5s ease; }
         .hero-overlay { background: linear-gradient(to top, var(--bg-dark) 0%, rgba(8, 10, 15, 0.4) 60%, rgba(8, 10, 15, 0) 100%); }
         .date-pill { background: rgba(255, 255, 255, 0.1); backdrop-filter: blur(12px); border: 1px solid rgba(255, 255, 255, 0.2); padding: 0.5rem 1.25rem; border-radius: 9999px; font-weight: 600; font-size: 0.85rem; color: #fff; }
         .date-row-card { background: rgba(255, 255, 255, 0.03); border: 1px solid var(--border-color); border-radius: 16px; padding: 1.25rem; transition: all 0.2s ease; cursor: pointer; }
@@ -28,11 +29,18 @@
         .warn-label { border-color: rgba(239, 68, 68, 0.2); background: rgba(239, 68, 68, 0.05); color: #fca5a5; }
 
         /* Action Bar Styling */
-        .action-bar { display: flex; gap: 12px; margin-top: 24px; }
-        .share-pill { background: rgba(255, 255, 255, 0.08); backdrop-filter: blur(10px); border: 1px solid rgba(255, 255, 255, 0.1); color: white; padding: 10px 20px; border-radius: 14px; display: flex; align-items: center; gap: 10px; transition: all 0.2s; cursor: pointer; font-size: 0.85rem; font-weight: 600; }
+        .action-bar { display: flex; flex-wrap: wrap; gap: 8px; margin-top: 24px; }
+        .share-pill { background: rgba(255, 255, 255, 0.08); backdrop-filter: blur(10px); border: 1px solid rgba(255, 255, 255, 0.1); color: white; padding: 8px 16px; border-radius: 12px; display: flex; align-items: center; gap: 8px; transition: all 0.2s; cursor: pointer; font-size: 0.75rem; font-weight: 700; text-transform: uppercase; letter-spacing: 0.05em; }
         .share-pill:hover { background: rgba(255, 255, 255, 0.15); border-color: rgba(255, 255, 255, 0.3); transform: translateY(-2px); }
-        .share-pill svg { width: 18px; height: 18px; opacity: 0.8; }
-        .share-pill.active { background: #10b981; border-color: #059669; }
+        .share-pill svg { width: 16px; height: 16px; opacity: 0.9; }
+        .share-pill.active { background: #10b981 !important; border-color: #059669 !important; color: white !important; }
+
+        /* Orange/Red Accent for Accessibility/Info */
+        .pill-warn { background: rgba(249, 115, 22, 0.15); border: 1px solid rgba(249, 115, 22, 0.4); color: #fb923c; }
+        .pill-warn:hover { background: rgba(249, 115, 22, 0.25); border-color: #f97316; box-shadow: 0 0 15px rgba(249, 115, 22, 0.2); }
+
+        /* Highlight Effect when scrolling to section */
+        .highlight-focus { border-color: #f97316 !important; box-shadow: 0 0 30px rgba(249, 115, 22, 0.15); }
     </style>
 </head>
 <body class="pb-24">
@@ -51,7 +59,11 @@
             </button>
             <button id="btn-copy" class="share-pill">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="9" y="9" width="13" height="13" rx="2" ry="2"/><path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"/></svg>
-                <span id="copy-text">Link kopieren</span>
+                <span id="copy-text">Link</span>
+            </button>
+            <button id="btn-accessibility" class="share-pill pill-warn hidden">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="4" r="1"/><path d="m18 19 1-7c0-1-1-2-3-2h-8c-2 0-3 1-3 2l1 7"/><path d="M12 10v4s.5 4 2.5 5"/><path d="M12 10v4s-.5 4-2.5 5"/></svg>
+                <span>Info & Barrierefreiheit</span>
             </button>
         </div>
 
@@ -157,7 +169,7 @@
         return text.replace(urlPattern, '<a href="$1" target="_blank" class="content-link">$1</a>');
     }
 
-    // --- Share & Copy Logic ---
+    // --- Action Bar Logic ---
     document.getElementById('btn-share').addEventListener('click', async () => {
         if (navigator.share) {
             try {
@@ -169,7 +181,7 @@
     document.getElementById('btn-copy').addEventListener('click', async function() {
         try {
             await navigator.clipboard.writeText(window.location.href);
-            const textSpan = document.getElementById('copy-text');
+            const textSpan = this.querySelector('span');
             const originalText = textSpan.innerText;
             this.classList.add('active');
             textSpan.innerText = "Kopiert!";
@@ -178,6 +190,13 @@
                 textSpan.innerText = originalText;
             }, 2000);
         } catch (err) {}
+    });
+
+    document.getElementById('btn-accessibility').addEventListener('click', () => {
+        const card = document.getElementById('info-warning-card');
+        card.scrollIntoView({ behavior: 'smooth', block: 'center' });
+        card.classList.add('highlight-focus');
+        setTimeout(() => card.classList.remove('highlight-focus'), 1500);
     });
 
     function redirectToCalendar(title, dateStr, startStr, endStr, location) {
@@ -228,6 +247,7 @@
     function renderWarningsAndInfo(data) {
         const container = document.getElementById('info-warning-card');
         const list = document.getElementById('info-warning-list');
+        const accBtn = document.getElementById('btn-accessibility');
         list.innerHTML = "";
         let hasContent = false;
 
@@ -253,7 +273,10 @@
             }
         });
 
-        if (hasContent) container.classList.remove('hidden');
+        if (hasContent) {
+            container.classList.remove('hidden');
+            accBtn.classList.remove('hidden');
+        }
     }
 
     async function fetchEventData() {
@@ -306,18 +329,32 @@
                 const pill = document.createElement('div');
                 pill.className = "date-pill"; pill.innerText = `${d.date} • ${d.start} Uhr`; summary.appendChild(pill);
                 const item = document.createElement('div');
-                item.className = "date-row-card flex justify-between items-center group w-full";
+                item.className = "date-row-card flex flex-col md:flex-row md:items-center justify-between gap-4 group w-full";
                 item.onclick = () => redirectToCalendar(data.title, d.date, d.start, d.end, data.location ? data.location.location_name : '');
                 item.innerHTML = `
-                    <div>
-                        <span class="text-white font-bold group-hover:text-blue-400 transition-colors">${d.date}</span>
-                        <div class="flex flex-wrap items-center gap-2 mt-1">
-                            <span class="text-[10px] text-slate-500 uppercase tracking-widest">${d.start} - ${d.end} Uhr</span>
-                            ${d.entrance ? `<span class="text-[9px] px-1.5 py-0.5 rounded bg-blue-500/10 text-blue-400 border border-blue-500/10 font-bold uppercase">Einlass: ${d.entrance}</span>` : ''}
-                            ${d.duration ? `<span class="text-[9px] px-1.5 py-0.5 rounded bg-white/5 text-slate-400 border border-white/5">Dauer: ${d.duration}</span>` : ''}
+                    <div class="flex-grow grid grid-cols-2 md:grid-cols-4 gap-4 items-center">
+                        <div>
+                            <span class="block text-[10px] text-slate-500 uppercase tracking-widest font-bold">Datum</span>
+                            <span class="text-white font-bold group-hover:text-blue-400 transition-colors">${d.date}</span>
+                        </div>
+                        <div>
+                            <span class="block text-[10px] text-slate-500 uppercase tracking-widest font-bold">Zeit</span>
+                            <span class="text-white font-medium">${d.start} - ${d.end} Uhr</span>
+                        </div>
+                        <div>
+                            ${d.entrance ? `
+                                <span class="block text-[10px] text-slate-500 uppercase tracking-widest font-bold">Einlass</span>
+                                <span class="text-blue-400 font-bold">${d.entrance} Uhr</span>
+                            ` : ''}
+                        </div>
+                        <div>
+                            ${d.duration ? `
+                                <span class="block text-[10px] text-slate-500 uppercase tracking-widest font-bold">Dauer</span>
+                                <span class="text-slate-400 font-medium">${d.duration}</span>
+                            ` : ''}
                         </div>
                     </div>
-                    <div class="h-8 w-8 rounded-full border border-slate-800 flex items-center justify-center text-xs group-hover:border-blue-500/50 transition-all">📅</div>`;
+                    <div class="h-10 w-10 flex-shrink-0 rounded-xl border border-slate-800 flex items-center justify-center text-xs group-hover:border-blue-500/50 group-hover:bg-blue-500/10 transition-all">📅</div>`;
                 list.appendChild(item);
             });
             document.getElementById('dates-card').classList.remove('hidden');
