--- a/static/event_page.html
+++ b/static/event_page.html
@@ -135,7 +135,7 @@
             </section>
 
             <section id="contact-card" class="bento-card hidden">
-                <h3 class="text-xs font-bold mb-6 text-slate-500 uppercase tracking-[0.2em]">Ansprechpartner</h3>
+                <h3 class="text-xs font-bold mb-6 text-slate-500 uppercase tracking-[0.2em]">Ansprechpartnerin</h3>
                 <div class="space-y-1">
                     <p id="contact-name" class="font-bold text-white"></p>
                     <a id="contact-email" href="" class="text-blue-500 text-sm hover:underline block"></a>
