--- a/static/event_page.html
+++ b/static/event_page.html
@@ -78,7 +78,7 @@
         <div class="text-6xl mb-6">⚠️</div>
         <h2 class="text-4xl font-black text-white mb-4">Event nicht gefunden</h2>
         <p id="error-message" class="text-slate-400 text-lg max-w-md mx-auto mb-10">Das von dir angeforderte Event existiert nicht oder wurde bereits entfernt.</p>
-        <a href="/" class="action-button">Zur Startseite</a>
+        <a href="/veranstaltungen" class="action-button">Zur Startseite</a>
     </div>
 
     <section id="preview-countdown-card" class="hidden bento-card border-blue-500/30 mb-12 text-center py-12">
