--- a/static/event_overview_page.html
+++ b/static/event_overview_page.html
@@ -228,6 +228,7 @@
 
 <footer class="max-w-7xl mx-auto mt-32 py-16 text-center border-t border-slate-900">
     <p class="text-slate-600 text-[10px] tracking-[0.4em] uppercase">© 2026 - Lars Kölbel Veranstaltungstechnik</p>
+    <a href="/event-admin-view" class="text-slate-800 text-[8px] tracking-[0.2em] uppercase mt-4 inline-block hover:text-slate-600 transition-colors">Admin Access</a>
 </footer>
 
 <script>
