--- a/static/event_creation_tool.html
+++ b/static/event_creation_tool.html
@@ -363,6 +363,7 @@
                     "upload-type": item.type,
                     "payload": finalFiles[item.key].data
                 });
+                console.log(res);
                 if(!res || res['upload-success'] === false) success = false;
             }
         }
