--- a/static/event_page.html
+++ b/static/event_page.html
@@ -39,6 +39,9 @@
         .pill-warn { background: rgba(249, 115, 22, 0.15); border: 1px solid rgba(249, 115, 22, 0.4); color: #fb923c; }
         .pill-warn:hover { background: rgba(249, 115, 22, 0.25); border-color: #f97316; box-shadow: 0 0 15px rgba(249, 115, 22, 0.2); }
 
+        .pill-redir { background: rgba(22, 75, 249, 0.15); border: 1px solid rgba(22, 120, 249, 0.4); color: #3c8ffb; }
+        .pill-wadir:hover { background: rgba(22, 147, 249, 0.25); border-color: #1665f9; box-shadow: 0 0 15px rgba(22, 136, 249, 0.2); }
+
         /* Highlight Effect when scrolling to section */
         .highlight-focus { border-color: #f97316 !important; box-shadow: 0 0 30px rgba(249, 115, 22, 0.15); }
     </style>
@@ -64,6 +67,9 @@
             <button id="btn-accessibility" class="share-pill pill-warn hidden">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="4" r="1"/><path d="m18 19 1-7c0-1-1-2-3-2h-8c-2 0-3 1-3 2l1 7"/><path d="M12 10v4s.5 4 2.5 5"/><path d="M12 10v4s-.5 4-2.5 5"/></svg>
                 <span>Info & Barrierefreiheit</span>
+            </button>
+            <button id="btn-main-page" class="share-pill pill-redir">
+                <span>Weitere Events</span>
             </button>
         </div>
 
@@ -202,6 +208,10 @@
         card.scrollIntoView({ behavior: 'smooth', block: 'center' });
         card.classList.add('highlight-focus');
         setTimeout(() => card.classList.remove('highlight-focus'), 1500);
+    });
+
+    document.getElementById('btn-main-page').addEventListener('click', () => {
+        window.location.href = "/veranstaltungen"
     });
 
     function redirectToCalendar(title, dateStr, startStr, endStr, location) {
